fix:  add connect-src

--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,10 @@
         media-src
           'self'
           https://chat-mztq.onrender.com/socket.io/
-          blob: data:;"
+          blob: data:;
+        connect-src 
+          'self' 
+          wss://chat-mztq.onrender.com;"
     />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
