--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,7 @@
         media-src
           'self'
           https://chat-mztq.onrender.com/socket.io/
-          blob: data:;
-        connect-src 
-          'self' 
-          wss://chat-mztq.onrender.com;"
+          blob: data:;"
     />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
