--- a/src/index.html
+++ b/src/index.html
@@ -7,20 +7,23 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta
-      http-equiv="Content-Security-Policy"
-      content="
-        default-src
-          'self'
-          'unsafe-inline'
-          https://chat-mztq.onrender.com/socket.io/
-          blob:;
-        img-src
-          https://* 'self' data:;
-        media-src
-          'self'
-          https://chat-mztq.onrender.com/socket.io/
-          blob: data:;"
-    />
+  http-equiv="Content-Security-Policy"
+  content="
+    default-src
+      'self'
+      'unsafe-inline'
+      https://chat-mztq.onrender.com/socket.io/
+      blob:;
+    connect-src
+      'self'
+      wss://chat-mztq.onrender.com;
+    img-src
+      https://* 'self' data:;
+    media-src
+      'self'
+      https://chat-mztq.onrender.com/socket.io/
+      blob: data:;"
+  />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,300;1,700;1,900&display=swap"
