--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,19 @@
           'unsafe-inline'
           https://chat-mztq.onrender.com/
           wss://chat-mztq.onrender.com/socket.io/
-          blob:;"
+          blob:;
+        media-src
+          'self'
+          https://chat-mztq.onrender.com/
+          wss://chat-mztq.onrender.com/socket.io/
+          blob: data:;
+        style-src
+          'self' 'unsafe-inline'
+          https://fonts.googleapis.com/
+          https://fonts.gstatic.com/
+          connect-src * 'unsafe-inline';"
   />
-  
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,300;1,700;1,900&display=swap"
